# RecallAPP

./: .gitignore  README.md  package-lock.json  package.json  vitest.config.js
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-05-27-recall-design.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  commands.rs  lib.rs  main.rs  models.rs  scheduler.rs  shortcuts.rs  storage.rs  tray.rs  window.rs
src-tauri/tests/: integration_cache.rs  integration_config.rs  integration_import_export.rs  integration_notes.rs  integration_positions.rs  integration_reminders.rs  integration_scheduler.rs  integration_storage.rs  integration_templates.rs  integration_validation.rs  integration_versions.rs
src/scripts/: api.js  app.js  editor.js  icons.js  notes.js  reminders.js  settings.js  utils.js
src/scripts/__tests__/: formatting.test.js  utils.test.js
src/styles/: base.css  components.css  themes.css
